# PreOnBoarding_4th_LuluLab

./: .gitignore  README.md  manage.py  pyproject.toml
Lululab/: settings.py  urls.py  wsgi.py
core/: models.py  utils.py
reservations/: models.py  urls.py  views.py
reservations/migrations/: 0001_initial.py  0002_alter_reservation_reservation_number.py  0003_hospital_is_available_and_more.py
users/: models.py
users/migrations/: 0001_initial.py  0002_alter_user_is_blacklist.py
