[tool.poetry]
name = "lululab"
version = "0.1.0"
description = ""
authors = ["Ahnsang0915 <tmqjf4921@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
python-dotenv = "^0.21.0"
django-cors-headers = "^3.13.0"
mysqlclient = "^2.1.1"
PyMySQL = "^1.0.2"
cryptography = "^38.0.2"

[tool.poetry.dev-dependencies]
django-extensions = "^3.2.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
